--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-navigation></app-navigation>
+<app-navigation *ngIf="admin == false"></app-navigation>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer *ngIf="admin == false"></app-footer>
