--- a/frontend/src/app/authorization/regular-user/login/login.component.html
+++ b/frontend/src/app/authorization/regular-user/login/login.component.html
@@ -3,23 +3,21 @@
     <div class="login-box">
         <h1>Login</h1>
         <form #loginForm="ngForm" (ngSubmit)="loginHandler(loginForm)">
-            <!-- TODO add error controls -->
             <label>Username: </label>
-            <input #usernameInput="ngModel" type="text" name="email" ngModel required>
+            <input #usernameInput="ngModel" type="text" name="username" ngModel required>
             <ng-container *ngIf="usernameInput.touched">
                 <p class="error" *ngIf="usernameInput.errors?.['required']">
                     Username is required!
                 </p>
             </ng-container>
             <label>Password: </label>
-            <input #passwordInput="ngModel" type="password" name="password" ngModel required>
+            <input #passwordInput="ngModel" [type]="passtext" name="password" ngModel required>
             <ng-container *ngIf="passwordInput.touched">
                 <p class="error" *ngIf="passwordInput.errors?.['required']">
                     Password is required!
                 </p>
             </ng-container>
-            <!-- TODO add event to show password -->
-            <input type="checkbox" name="showpass">
+            <span (mouseenter)="showPass()" (mouseleave)="hidePass()">👁️</span>
             <button class="submit" [disabled]="loginForm.invalid">Log in</button>
         </form>
         <p>You don't have an account? <a routerLink="/users/register">Register here.</a></p>
