--- a/frontend/src/app/authorization/regular-user/register/register.component.html
+++ b/frontend/src/app/authorization/regular-user/register/register.component.html
@@ -27,16 +27,16 @@
                 </p>
             </ng-container>
             <label>Password: </label>
-            <input #passwordInput="ngModel" type="password" name="password" ngModel required>
+            <input #passwordInput="ngModel" [type]="passtext" name="password" ngModel required>
             <ng-container *ngIf="passwordInput.touched">
                 <p class="error" *ngIf="passwordInput.errors?.['required']">
                     Password is required!
                 </p>
             </ng-container>
             <!-- TODO add event to show password -->
-            <input type="checkbox" name="showpass">
+            <span (mouseenter)="showPass()" (mouseleave)="hidePass()">👁️</span>
             <label>Confirm Password: </label>
-            <input #repassInput="ngModel" type="password" name="repass" ngModel required>
+            <input #repassInput="ngModel" [type]="repasstext" name="repass" ngModel required>
             <ng-container *ngIf="repassInput.touched">
                 <p class="error" *ngIf="repassInput.errors?.['required']">
                     Repeating password is required!
@@ -46,7 +46,7 @@
                 </p>
             </ng-container>
             <!-- TODO add event to show password -->
-            <input type="checkbox" name="showrepass">
+            <span (mouseenter)="showRepass()" (mouseleave)="hideRepass()">👁️</span>
             <button class="submit" [disabled]="registerForm.invalid">Register</button>
         </form>
         <p>You already have an account? <a routerLink="/users/login">Login here.</a></p>
