Updated user details in admin panel

--- a/frontend/src/app/authorization/admin/panel/panel.component.html
+++ b/frontend/src/app/authorization/admin/panel/panel.component.html
@@ -1,6 +1,6 @@
 <nav>
     <a routerLink="/o074dm1n/h1dd3n4ddr35s/570p/panel" title="All users" (click)="allUsersHandler()">All users list</a>
-    <a routerLink="o074dm1n/h1dd3n4ddr35s/570p/panel" title="Blocked users">Blocked users list</a>
+    <a routerLink="/o074dm1n/h1dd3n4ddr35s/570p/panel" title="Blocked users" (click)="blockedUsersHandler()">Blocked users list</a>
     <a routerLink="/o074dm1n/h1dd3n4ddr35s/570p/logout" title="Logout">Logout</a>
 </nav>
 
