--- a/frontend/src/app/authorization/regular-user/profile/profile.component.html
+++ b/frontend/src/app/authorization/regular-user/profile/profile.component.html
@@ -41,6 +41,7 @@
             <p>
                 <ng-template #edit>
                     <button class="edit" [disabled]="updateUser.invalid" [type]="'submit'">Save</button>
+                    <button class="cancel" (click)="cancelEditing()">Cancel</button>
                 </ng-template>
                 <ng-template #submit>
                     <button class="submit" [type]="'button'" (click)="toggleEditMode()">Edit data</button>
