Little refactoring of static texts, small fixes

--- a/frontend/src/app/core/faq/faq.component.html
+++ b/frontend/src/app/core/faq/faq.component.html
@@ -33,7 +33,7 @@
             <p>We are collecting the data from the customer's registration just for the sake of having better
                 contact with them, you can still browse the offers to buy a vehicle without being logged in or
                 registered. An account is required for:</p>
-            <p><strong>1.</strong> offering your vehicle for selling.</p>
+            <p><strong>1.</strong> Offering your vehicle for selling.</p>
             <p><strong>2.</strong> If you need our mechanics' services.</p>
             <!-- <p><strong>3.</strong> If you want to apply for a job in our company.</p> -->
             <p>And that's it! Everything else you can do without an account!</p>
@@ -50,7 +50,7 @@
             <h3>My account is blocked, what should I do?</h3>
         </div>
         <div class="answer">
-            <p>Usually, the account gets blocked if you enter wrong login data <strong>10 times.</strong> This is
+            <p>Usually, the account gets blocked if you enter wrong login data <strong>several times.</strong> This is
                 done for security measures to prevent hacking. If you account is blocked or you have suspicion that
                 you might have been hacked,
                 <span class="contact">
@@ -61,14 +61,23 @@
             </p>
         </div>
         <div class="question">
+            <h3>Do you deliver cars to demanded places?</h3>
+        </div>
+        <div class="answer">
+            <p>We have drivers and platforms that can transport your vehicle wherever you want in the country, this
+                service is available in all provinces.</p>
+        </div>
+        <div class="question">
             <h3>How long will it take if I chose delivery option from you?</h3>
         </div>
         <div class="answer">
             <p>It depends on where you want your delivery, and how far it is the place of the person you are buying
-                from.</p>
+                from, also what time of the day you order the delivery. If the distance is more than <strong>300
+                    km</strong> and you
+                order for example at <strong>15 o'clock,</strong> we will send our drivers on the day tomorrow.</p>
         </div>
         <div class="question">
-            <h3>Why is my request not approved?</h3>
+            <h3>Why is my request for repairing not approved?</h3>
         </div>
         <div class="answer">
             <p>If our administration team sees that the request does not provide enough info, or that it is
