Started to implement API calls, added guest guard

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-navigation *ngIf="admin == false"></app-navigation>
-<router-outlet></router-outlet>
-<app-footer *ngIf="admin == false"></app-footer>
+<app-authenticate>
+    <app-navigation *ngIf="admin == false"></app-navigation>
+    <router-outlet></router-outlet>
+    <app-footer *ngIf="admin == false"></app-footer>
+</app-authenticate>
