--- a/frontend/src/app/core/navigation/navigation.component.html
+++ b/frontend/src/app/core/navigation/navigation.component.html
@@ -9,7 +9,10 @@
     </div>
     <div *ngIf="isLoggedIn">
         <a routerLink="/repair" title="Repair vehicle">Vehicle service and repair</a>
-        <a routerLink="/users/:userId/profile" title="Profile">{{user?.username}} - My Profile</a>
+        <a routerLink="/users/profile" title="Profile">{{user?.username}} - My Profile</a>
         <a routerLink="/users/logout" title="Logout">Logout</a>
     </div>
+
+
+    <p class="notify-error">{{backendError$ | async | json}}</p>
 </nav>
