--- a/frontend/src/app/auth-admin/admin-login/admin-login.component.html
+++ b/frontend/src/app/auth-admin/admin-login/admin-login.component.html
@@ -1,5 +1,6 @@
 <main>
 
+    <h2><a routerLink="/">GO BACK TO MAIN PAGE</a></h2>
     <div class="login-box">
         <h1>LOG IN AS AN ADMIN</h1>
         <form #loginForm="ngForm" (ngSubmit)="loginHandler(loginForm)">
@@ -29,7 +30,7 @@
                 </p>
             </ng-container>
             <span (mouseenter)="showPIN()" (mouseleave)="hidePIN()">👁️</span>
-            <button class="submit" [disabled]="loginForm.invalid">Log in</button>
+            <button class="submit">Log in</button>
         </form>
     </div>
 
