--- a/frontend/src/app/core/navigation/navigation.component.html
+++ b/frontend/src/app/core/navigation/navigation.component.html
@@ -8,7 +8,7 @@
         <a routerLink="/users/register" title="Register">Register</a>
     </div>
     <div *ngIf="isLoggedIn">
-        <a routerLink="/repair" title="Repair vehicle">Vehicle service and repair</a>
+        <a routerLink="/data" title="Repair vehicle">Vehicle service and repair</a>
         <a routerLink="/users/profile" title="Profile">{{user?.username}} - My Profile</a>
         <a routerLink="/users/logout" title="Logout">Logout</a>
     </div>
