--- a/frontend/src/app/auth-admin/panel/panel.component.html
+++ b/frontend/src/app/auth-admin/panel/panel.component.html
@@ -11,7 +11,7 @@
     
     <div *ngIf="usersList != null" class="all-users">
         <div *ngFor="let user of usersList" class="user-card">
-            <p style="display:none">{{user._id}}</p>
+            <h2>{{user._id}}</h2>
             <h2>{{user.username}}</h2>
             <p>
                 <button class="details" (click)="detailsHandler($event)">Details</button>
