--- a/frontend/src/app/offers/offers-list/offers-list.component.html
+++ b/frontend/src/app/offers/offers-list/offers-list.component.html
@@ -1,7 +1,7 @@
 <main>
     <a routerLink="/data/offers" (click)="myOffersHandler()">My offers</a>
     <a routerLink="/data/offers/create">Create your new offer</a>
-    <form #searchForm="ngForm">
+    <form #searchForm="ngForm" (ngSubmit)="searchOffers(searchForm)">
         <!-- TODO make the style better -->
         <!-- TODO make the other divs to be hidden upon choosing something from the dropdown -->
         <div id="brand-vehicle-select">
@@ -34,7 +34,7 @@
                 <option value="Tesla">Tesla</option>
                 <option value="Toyota">Toyota</option>
                 <option value="Trabant">Trabant</option>
-                <option value="VW">VW</option>
+                <option value="Volkswagen">Volkswagen</option>
             </select>
         </div>
         <div id="all-models">
@@ -401,9 +401,9 @@
                     <option value="T 1.1">T 1.1</option>
                 </select>
             </div>
-            <div *ngIf="brand.value == 'VW'" id="VW">
+            <div *ngIf="brand.value == 'Volkswagen'" id="VW">
                 <label for="model">Choose model </label>
-                <select name="model" #vw="ngModel" ngModel (change)="onSelectedModelHandler(vw.value)">
+                <select name="model" #Volkswagen="ngModel" ngModel (change)="onSelectedModelHandler(Volkswagen.value)">
                     <option selected value="">All</option>
                     <option value="Passat">Passat</option>
                     <option value="Golf">Golf</option>
@@ -420,16 +420,16 @@
             </div>
         </div>
         <label for="fromPrice">From price: </label>
-        <input type="number" name="fromPrice">
+        <input type="number" name="fromPrice" #fromprice="ngModel" ngModel>
         <label for="toPrice">To price: </label>
-        <input type="number" name="toPrice">
+        <input type="number" name="toPrice" #toprice="ngModel" ngModel>
         <label for="fromYear">From year: </label>
-        <input type="number" name="fromYear">
+        <input type="number" name="fromYear" #fromyear="ngModel" ngModel>
         <label for="toYear">To year: </label>
-        <input type="number" name="toYear">
+        <input type="number" name="toYear" #toyear="ngModel" ngModel>
         <label for="keyword">Keyword: </label>
-        <input type="text" name="keyword">
-        <button class="submit">Search</button>
+        <input type="text" name="keyword" #keyword="ngModel" ngModel>
+        <button class="submit" type="submit">Search</button>
     </form>
     <h1 *ngIf="brand.value !== '' && !myOffers">Browse offers for {{brand.value}} brand</h1>
     <h1 *ngIf="brand.value === '' && !myOffers">Browse offers for all brands</h1>
